--- a/init_testing.ipynb
+++ b/init_testing.ipynb
@@ -2,49 +2,121 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERobot: panda (by Franka Emika), 7 joints (RRRRRRR), 1 gripper, geometry, collision\n",
-      "┌─────┬──────────────┬───────┬─────────────┬────────────────────────────────────────────────┐\n",
-      "│link │     link     │ joint │   parent    │              ETS: parent to link               │\n",
-      "├─────┼──────────────┼───────┼─────────────┼────────────────────────────────────────────────┤\n",
-      "│   0\u001b[0m │ \u001b[38;5;4mpanda_link0\u001b[0m  │      \u001b[0m │ BASE\u001b[0m        │ SE3()\u001b[0m                                          │\n",
-      "│   1\u001b[0m │ panda_link1\u001b[0m  │     0\u001b[0m │ panda_link0\u001b[0m │ SE3(0, 0, 0.333) ⊕ Rz(q0)\u001b[0m                      │\n",
-      "│   2\u001b[0m │ panda_link2\u001b[0m  │     1\u001b[0m │ panda_link1\u001b[0m │ SE3(-90°, -0°, 0°) ⊕ Rz(q1)\u001b[0m                    │\n",
-      "│   3\u001b[0m │ panda_link3\u001b[0m  │     2\u001b[0m │ panda_link2\u001b[0m │ SE3(0, -0.316, 0; 90°, -0°, 0°) ⊕ Rz(q2)\u001b[0m       │\n",
-      "│   4\u001b[0m │ panda_link4\u001b[0m  │     3\u001b[0m │ panda_link3\u001b[0m │ SE3(0.0825, 0, 0; 90°, -0°, 0°) ⊕ Rz(q3)\u001b[0m       │\n",
-      "│   5\u001b[0m │ panda_link5\u001b[0m  │     4\u001b[0m │ panda_link4\u001b[0m │ SE3(-0.0825, 0.384, 0; -90°, -0°, 0°) ⊕ Rz(q4)\u001b[0m │\n",
-      "│   6\u001b[0m │ panda_link6\u001b[0m  │     5\u001b[0m │ panda_link5\u001b[0m │ SE3(90°, -0°, 0°) ⊕ Rz(q5)\u001b[0m                     │\n",
-      "│   7\u001b[0m │ panda_link7\u001b[0m  │     6\u001b[0m │ panda_link6\u001b[0m │ SE3(0.088, 0, 0; 90°, -0°, 0°) ⊕ Rz(q6)\u001b[0m        │\n",
-      "│   8\u001b[0m │ \u001b[38;5;4m@panda_link8\u001b[0m │      \u001b[0m │ panda_link7\u001b[0m │ SE3(0, 0, 0.107)\u001b[0m                               │\n",
-      "└─────┴──────────────┴───────┴─────────────┴────────────────────────────────────────────────┘\n",
+      "default angles q: [ 0.78539816 -0.3         0.         -2.2         0.          2.\n",
+      "  0.78539816]\n",
+      "  \u001b[38;5;1m 0.9553  \u001b[0m \u001b[38;5;1m 0.2955  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 0.2     \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m-0.2955  \u001b[0m \u001b[38;5;1m 0.9553  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 0.2     \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;4m 0.633   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
-      "┌─────┬─────┬────────┬─────┬───────┬─────┬───────┬──────┐\n",
-      "│name │ q0  │ q1     │ q2  │ q3    │ q4  │ q5    │ q6   │\n",
-      "├─────┼─────┼────────┼─────┼───────┼─────┼───────┼──────┤\n",
-      "│  qr\u001b[0m │  0°\u001b[0m │ -17.2°\u001b[0m │  0°\u001b[0m │ -126°\u001b[0m │  0°\u001b[0m │  115°\u001b[0m │  45°\u001b[0m │\n",
-      "│  qz\u001b[0m │  0°\u001b[0m │  0°\u001b[0m    │  0°\u001b[0m │  0°\u001b[0m   │  0°\u001b[0m │  0°\u001b[0m   │  0°\u001b[0m  │\n",
-      "└─────┴─────┴────────┴─────┴───────┴─────┴───────┴──────┘\n",
+      "  \u001b[38;5;1m 0.9553  \u001b[0m \u001b[38;5;1m 0.2955  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 0.2     \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m-0.2955  \u001b[0m \u001b[38;5;1m 0.9553  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 0.2     \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;4m 0.633   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import roboticstoolbox as rtb\n",
-    "# robot = rtb.models.DH.UR10()\n",
-    "robot = rtb.models.URDF.Panda()\n",
-    "print(robot)\n",
-    "import numpy as np"
+    "from spatialmath import *\n",
+    "from spatialmath.base import *\n",
+    "from spatialgeometry import *\n",
+    "from roboticstoolbox import *\n",
+    "import numpy as np\n",
+    "import swift\n",
+    "\n",
+    "robot = models.URDF.Panda()\n",
+    "# Offset robot base\n",
+    "Tbase = SE3.Tx(0.2) * SE3.Ty(0.2) * SE3.Tz(0.3)\n",
+    "robot.base = Tbase\n",
+    "\n",
+    "qs = robot.qr\n",
+    "qs[0] = np.pi/4\n",
+    "print(\"default angles q:\", qs)\n",
+    "robot.q = qs \n",
+    "env = swift.Swift()\n",
+    "env.launch(realtime=True)\n",
+    "env.add(robot)\n",
+    "\n",
+    "col = [1, 0, 1, 0.5]\n",
+    "\n",
+    "# Add some objects\n",
+    "\n",
+    "i = 0\n",
+    "link = robot.links[i]\n",
+    "a = link.A(robot.q[i])\n",
+    "\n",
+    "Tlink0 = Tbase * a\n",
+    "# print(\"TLink0: \", Tlink0)\n",
+    "\n",
+    "s = Sphere(0.15, pose=Tlink0, collision=False, color=col)\n",
+    "a = Axes(0.3, pose=Tlink0)\n",
+    "env.add(s)\n",
+    "env.add(a)\n",
+    "\n",
+    "i = 1\n",
+    "link = robot.links[i]\n",
+    "a = link.A(robot.q[i])\n",
+    "Tlink1 = Tlink0 * a\n",
+    "# print(Tlink1)\n",
+    "\n",
+    "s = Sphere(0.1, pose=Tlink1, collision=False, color=col)\n",
+    "a = Axes(0.3, pose=Tlink1)\n",
+    "env.add(s)\n",
+    "env.add(a)\n",
+    "\n",
+    "i = 2\n",
+    "link = robot.links[i]\n",
+    "a = link.A(robot.q[i])\n",
+    "Tlink2 = Tlink1 * a\n",
+    "# print(Tlink2)\n",
+    "s = Sphere(0.1, pose=Tlink2, collision=False, color=col)\n",
+    "a = Axes(0.3, pose=Tlink2)\n",
+    "env.add(s)\n",
+    "env.add(a)\n",
+    "\n",
+    "i = 3\n",
+    "link = robot.links[i]\n",
+    "a = link.A(robot.q[i])\n",
+    "Tlink3 = Tlink2 * a\n",
+    "print(Tlink1)\n",
+    "s = Sphere(0.1, pose=Tlink3, collision=False, color=col)\n",
+    "a = Axes(0.3, pose=Tlink3)\n",
+    "env.add(s)\n",
+    "env.add(a)\n",
+    "\n",
+    "\n",
+    "i = 4\n",
+    "link = robot.links[i]\n",
+    "a = link.A(robot.q[i])\n",
+    "Tlink4 = Tlink3 * a\n",
+    "print(Tlink1)\n",
+    "s = Sphere(0.1, pose=Tlink4, collision=False, color=col)\n",
+    "a = Axes(0.3, pose=Tlink4)\n",
+    "env.add(s)\n",
+    "env.add(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +126,7 @@
        "  panda"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,14 +165,14 @@
    ],
    "source": [
     "# create traj from qz to qr in 100 steps\n",
-    "traj = rtb.jtraj(robot.qz, robot.qr, 100)\n",
+    "traj = jtraj(robot.qz, robot.qr, 100)\n",
     "print(traj.q.shape)\n",
     "traj.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +191,21 @@
        "[<Axes: xlabel='Time (s)', ylabel='Joint coordinates (rad,m)'>]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rtb.xplot(traj.qd)"
+    "xplot(traj.qd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
