First working example of creating a .stl file through docker pipeline

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,14 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import swift\n",
     "import roboticstoolbox as rtb\n",
     "import spatialgeometry as sg\n",
-    "import spatialmath as sm"
+    "import spatialmath as sm\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.7071  \u001b[0m \u001b[38;5;1m-0.7071  \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.7071  \u001b[0m \u001b[38;5;1m 0.7071  \u001b[0m \u001b[38;5;4m 1       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
+      "\n",
+      "[ 0.78539816 -0.          0.        ]\n",
+      "0.0 0.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "T = sm.SE3() * sm.SE3.Tz(1.0) * sm.SE3.Rx(math.pi/4)\n",
+    "print(T)\n",
+    "rpy = T.rpy()\n",
+    "print(rpy)\n",
+    "print(T.x, T.y, T.z)\n",
+    "\n",
+    "\n",
+    "\n",
+    "Tnew = sm.SE3.Trans(rpy) *sm.SE3.RPY([T.x, T.y, T.z]) \n",
+    "\n"
    ]
   },
   {
@@ -63,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
